--- a/altlinux.yaml
+++ b/altlinux.yaml
@@ -78,8 +78,8 @@ python3-pkg-resources:
   altlinux: [python3-module-pkg_resources]
 yaml:
   altlinux: [libyaml-devel]
-ignition-math6:
-  altlinux: 
+#ignition-math6:
+  #altlinux: 
 git:
   altlinux: [git]
 liborocos-kdl-dev:
